# esp-clock-rs

./: .gitmodules  Cargo.toml  Makefile  README.md  README.v2.md
android-impl/: Cargo.toml  README.md  manifest.yaml
android-impl/src/: interface_impl.rs  lib.rs
android-impl/src/interface_impl/: evil_apple.rs  http.rs  led_controller.rs  system.rs  tone.rs
app/admin-cli/: Cargo.toml
app/admin-cli/src/: main.rs  subcmds.rs
app/admin-cli/src/subcmds/: onebutton.rs
app/app-core/: Cargo.toml  a.mid  build.rs
app/app-core/docs/: 设计预期.md
app/app-core/music/: If_I_Can_Stop_One_Heart_From_Breaking.mid  Le Souvenir avec le crepuscule.mid
app/app-core/src/: adapter.rs  lib.rs  node.rs  proto.rs  scheduler.rs  storage.rs  ui.rs
app/app-core/src/adapter/: route.rs
app/app-core/src/node/: page.rs  service.rs  topview.rs
app/app-core/src/proto/: ipc.rs  message.rs  node.rs
app/app-core/ui/: app.slint
app/app-core/ui/common/: route.slint
app/app-core/ui/components/: index.slint  string-listview.slint
app/app-core/ui/pages/: index.slint
app/app-core/ui/topviews/: alertdialog.slint  canvas.slint  index.slint  performance.slint
app/desktop-impl/: Cargo.toml  msg_graph.py
app/desktop-impl/src/: http_client.rs  http_server.rs  json_storage.rs  main.rs  midi_player.rs
app/desktop-software-renderer-impl/: Cargo.toml
app/desktop-software-renderer-impl/src/: main.rs
app/esp32c3-impl/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  partitions.csv  sdkconfig.defaults
app/esp32c3-impl/.cargo/: config.toml
app/esp32c3-impl/src/: main.rs  node.rs  peripherals.rs
app/esp32c3-impl/src/node/: buzzer.rs  canvas.rs  httpclient.rs  httpserver.rs  onebutton.rs  performance.rs  sntp.rs  storage.rs  system.rs  wifi.rs
app/esp32c3-impl/src/peripherals/: pyclock.rs
app/wasm-impl/: Cargo.toml  Makefile  index.html  index.js  index.module.js
app/wasm-impl/js/: midi.min.js
app/wasm-impl/src/: console.rs  http.rs  lib.rs  main.rs  midiplayer.rs  storage.rs  timestamp.rs
client/: Cargo.toml
client/src/: error.rs  lib.rs  weather.rs
client/src/weather/: client.rs  entity.rs
desktop-impl/: Cargo.toml
desktop-impl/src/: main.rs
desktop-simulator-impl/: .gitignore  Cargo.toml
desktop-simulator-impl/src/: interface_impl.rs  line_buffer_provider.rs  main.rs  platform.rs  player.rs
desktop-simulator-impl/src/interface_impl/: screen_brightness.rs  tone.rs
desktop-simulator-impl/src/interface_impl/http/: client.rs  server.rs
esp32c3-impl/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cfg.example.toml  sdkconfig.defaults
esp32c3-impl/.cargo/: config.toml
esp32c3-impl/src/: connection.rs  draw.rs  evil_apple.rs  interface_impl.rs  led_controller.rs  main.rs  player.rs  system.rs  wifi.rs
esp32c3-impl/src/interface_impl/: system.rs  tone.rs
esp32c3-impl/src/interface_impl/http/: client.rs  server.rs
esp32c3-impl/src1/: wifi.rs
esp32c3-impl/src1/interface_impl/: http.rs  network_state.rs
esp32c3-impl/src1/interface_impl/http/: client.rs
libs/desktop-svc/: Cargo.toml
libs/desktop-svc/src/: http.rs  lib.rs  storage.rs
libs/desktop-svc/src/http/: client.rs  server.rs
libs/embedded-graphics-slint-image-buf/: Cargo.toml
libs/embedded-graphics-slint-image-buf/src/: lib.rs
libs/embedded-software-slint-backend/: Cargo.toml
libs/embedded-software-slint-backend/src/: lib.rs  lib1.rs
pkg/http-client/http-client-desktop/: Cargo.toml
pkg/http-client/http-client-desktop/src/: lib.rs
pkg/http-client/http-client-embedded/: Cargo.toml
pkg/http-client/http-client-embedded/src/: lib.rs
server/: Cargo.toml
server/src/: error.rs  main.rs  service.rs
server/src/service/: openwrt.rs  photo.rs  ping.rs  weather.rs
server/src/service/openwrt/: client.rs
slint-app/: .gitignore  Cargo.toml  Makefile  build.rs
slint-app-v2/: Cargo.toml  build.rs
slint-app-v2/src/: adapter.rs  app.rs  common.rs  lib.rs  main.rs  scheduler.rs  ui.rs
slint-app-v2/src/adapter/: route.rs
slint-app-v2/src/app/: home.rs  menu.rs  page.rs  router.rs  service.rs  weather.rs
slint-app-v2/src/app/page/: boot.rs  home.rs  menu.rs  weather.rs
slint-app-v2/src/app/service/: http.rs  onebutton.rs  router.rs
slint-app-v2/src/common/: app_name.rs  message.rs  node.rs  topic.rs
slint-app-v2/src/common/message/: home.rs  http.rs  scheduler.rs
slint-app-v2/src/node/page/: boot.rs  home.rs  menu.rs  (+1 more)
slint-app-v2/src/proto/: message.rs
slint-app-v2/ui/: app.slint
slint-app-v2/ui/common/: env.slint  event.slint  route.slint
slint-app-v2/ui/pages/: index.slint
slint-app/docs/: 交互逻辑状态图.puml
slint-app/music/: Aranaras_Theme__HOYO-MiX_.mid  Blossoms_of_Summer_Night__Dimeng_Yuan_from_Genshin_Impact.mid  Dragonspine_Song_No._1_-_Yu-Peng_Chen.mid  Genshin Impact - Innocent Age.mid  Genshin_Impact_-_Lantern_Rite_OST.mid  Genshin_Impact_OST_-_Liyue_Medley_Calm_tracks.mid  Klee.mid  Konda_Village_BGM_Morning_Genshin_Impact.mid  Lantern_Rite.mid  Lantern_Rite_1.mid  Nahida_trailer.mid  Port_Ormos.mid  Sinners_Finale_Genshin_Impact.mid  fontaine.mid  gy.mid  ldjj.mid  qqz.mid  yaoyao.mid  我不曾忘记.mid
slint-app/src/: app.rs  clock.rs  common.rs  evil_apple.rs  fpstest.rs  home.rs  hsv.rs  interface.rs  led_controller.rs  lib.rs  music.rs  network.rs  photo.rs  projector.rs  resources.rs  server.rs  storage.rs  system.rs  util.rs
slint-app/src/app/: clock.rs  evil_apple.rs  firework.rs  fpstest.rs  home.rs  music.rs  network.rs  photo.rs  server.rs
slint-app/src/common/: base_graphics_app.rs  midi.rs
slint-app/src/interface/: http.rs  network_state.rs  system.rs
slint-app/src/storage/: system.rs
slint-app/src/util/: server.rs
slint-app/tools/: merge_midi.py
slint-app/ui/: appwindow.slint  menu.slint
slint-app/ui/boot/: boot.slint  boot_test.slint
slint-app/ui/home/: home.slint
slint-app/ui/menu/: menu.slint
slint-app/ui/network/: network.slint
slint-app/ui/pages/: index.slint
slint-app/ui/performance/: p.slint
slint-app/ui/photo/: photo.slint
wasm-impl/: Cargo.toml  Makefile  README.md  index.html
wasm-impl/src/: main.rs
(+166 files in other folders)
