[package]
name = "android-impl"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4"
android_logger = "0.11"
android-activity = { version = "0.5", features = [ "native-activity" ] }
openssl = { version = "0.10", features = ["vendored"] }
slint = { version = "1.3.0", default-features = false, features = ["compat-1-0", "unsafe-single-threaded"] }
anyhow = "1.0.44"
embedded-graphics = "0.8.0"
embedded-graphics-simulator = "0.5.0"
embedded-svc = "0.26.2"
env_logger = "0.10.1"
button-driver = { version = "0.1.2", features = ["std"] }
desktop-svc = { path = "../libs/desktop-svc" }
slint-app = { path = "../slint-app" }
i-slint-backend-android-activity = { version = "=1.3.0", features = ["native-activity"] }

[lib]
crate_type = ["cdylib"]