[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-io = { version = "0.6.1", features = ["std"] }
embedded-io-adapters = { version = "0.6.1", features = ["std"] }
embedded-svc = "0.26.4"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
