[package]
name = "desktop-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.3.0", default-features = false }
anyhow = "1.0.44"
embedded-svc = "0.26.2"
env_logger = "0.10.1"
log = "0.4.20"
button-driver = { version = "0.1.2", features = ["std"] }
desktop-svc = { path = "../libs/desktop-svc" }
slint-app = { path = "../slint-app" }
