[package]
name = "desktop-simulator-impl"
version = "0.1.0"
edition = "2021"


[dependencies]
slint = { git = "https://github.com/zhangzqs/slint", branch = "fix-esp-std", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
] }
anyhow = "1.0.44"
embedded-graphics = "0.8.0"
embedded-graphics-simulator = "0.5.0"
embedded-svc = "0.26.2"
env_logger = "0.10.1"
log = "0.4.20"
button-driver = { version = "0.1.2", features = ["std"] }
desktop-svc = { path = "../libs/desktop-svc" }
embedded-software-slint-backend = { path = "../libs/embedded-software-slint-backend" }
slint-app = { path = "../slint-app" }
embedded-graphics-group = { path = "../libs/embedded-graphics-group" }
embedded-tone = { path = "../libs/embedded-tone" }
rodio = "0.17.3"
