[package]
name = "esp32c3-impl"
version = "0.1.0"
authors = ["zzq <i@zhangzqs.cn>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["all", "hal", "esp-idf-sys/native"]


pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-svc = { version = "0.25", optional = true, default-features = false }
embedded-graphics = "0.8.0"
anyhow = "1.0.71"
display-interface-spi = "0.4.1"
display-interface = "0.4.1"
mipidsi = { version = "0.7.1", default-features = false }
toml-cfg = "=0.1.3"
embedded-hal = "1.0.0-alpha.10"
button-driver = { version = "0.1.1", features = ["std", "esp"] }
slint = { version = "1.1.1", default-features = false, features = ["compat-1-0", "unsafe-single-threaded"] }
euclid = "0.22.9"
slint-app = { path = "../slint-app" }

[build-dependencies]
embuild = "0.31.2"
anyhow = "=1.0.71"
toml-cfg = "=0.1.3"
slint-build = { version = "1.0.0" }
