[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
image = "0.24.7"
num-complex = "0.4.4"
poem = "1.3.58"
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
serde = "1.0.188"
serde_json = "1.0.107"
serde_yaml = "0.9.27"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
