[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
http = "1.0.0"
image = "0.24.7"
log = "0.4.20"
num-complex = "0.4.4"
poem = "1.3.58"
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
qweather-http-client = "0.2.1"
qweather-service = "0.2.1"
reqwest = { version = "0.11.23", features = ["json", "cookies"] }
serde = "1.0.188"
serde_json = "1.0.107"
serde_yaml = "0.9.27"
thiserror = "1.0.56"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
redis = { version = "0.24.0", features = ["tokio-comp", "json"] }
