[package]
name = "slint-app"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.3.0", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
] }
log = { version = "0.4.17" }
time = "0.3.25"
embedded-svc = "0.26.2"
euclid = "0.22.9" # slint will build error if don't have this
embedded-graphics-group = { path = "../libs/embedded-graphics-group" }
embedded-graphics = "0.8.1"
embedded-tone = { path = "../libs/embedded-tone" }
midly = { version = "0.5.3", default-features = false, features = ["alloc"] }
include_dir = { version = "0.7.3" }
serde = "1.0.193"
serde_json = "1.0.108"
embedded-io = { version = "0.6.1", features = ["std"] }
embedded-graphics-slint-image-buf = { path = "../libs/embedded-graphics-slint-image-buf" }
client = { path = "../client" }
anyhow = "1.0.79"
embedded-io-adapters = { version = "0.6.1", features = ["std"] }

[build-dependencies]
slint-build = { version = "1.3.0" }
