[package]
name = "wasm-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
log = "0.4.20"
slint = "1.3.0"
wasm-bindgen = "0.2.88"
wasm-log = "0.3.1"
slint-app ={ path = "../slint-app" }
embedded-graphics-group = { path = "../libs/embedded-graphics-group" }
embedded-software-slint-backend = { path = "../libs/embedded-software-slint-backend" }


[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[build]
target = "wasm-wasi"