[package]
name = "admin-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
anyhow = "1.0.86"
proto = { path = "../proto"}
termion = "4.0.0"
tui = "0.19.0"
crossterm = "0.27.0"

