[package]
name = "app-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
log = "0.4.21"
slint = { version = "1.3.0", default-features = false }
proto = { path = "../proto" }
time = "0.3.36"
button-driver = { path = "../../libs/button-driver" }

[build-dependencies]
slint-build = { version = "1.3.0" }
cfg-if = "1.0.0"

[features]
default = [
    "slint/default"
]
software-renderer = [
    "slint/compat-1-2",
    "slint/unsafe-single-threaded",
]
