[package]
name = "app-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
log = "0.4.21"
slint = { version = "1.3.0", default-features = false }
time = { version = "0.3.36", features = ["parsing"] }
button-driver = { path = "../../libs/button-driver" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
time-macros = { version = "0.2.18", features = ["parsing"] }

[build-dependencies]
slint-build = { version = "1.3.0" }
cfg-if = "1.0.0"

[features]
default = [
    "slint/default"
]
software-renderer = [
    "slint/compat-1-2",
    "slint/unsafe-single-threaded",
]
