[package]
name = "desktop-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.6.0" }
anyhow = "1.0.44"
env_logger = "0.10.1"
log = "0.4.20"
app-core = { path = "../app-core" }
reqwest = { version = "0.12.4", features = ["blocking"] }
tiny_http = "0.12.0"
serde = "1.0.202"
serde_json = "1.0.117"
