[package]
name = "desktop-impl"
version = "0.1.0"
edition = "2021"

[features]
default = []
software-renderer = [
    "app-core/software-renderer",
    "embedded-software-slint-backend",
    "embedded-graphics",
    "embedded-graphics-simulator",
]

[dependencies]
slint = { version = "1.6.0" }
anyhow = "1.0.44"
env_logger = "0.10.1"
log = "0.4.20"
app-core = { path = "../app-core", default-features = false }
reqwest = { version = "0.12.4", features = ["blocking", "gzip"] }
tiny_http = "0.12.0"
serde = "1.0.202"
serde_json = "1.0.117"

embedded-software-slint-backend = { path = "../../libs/embedded-software-slint-backend", optional = true }
embedded-graphics = { version = "0.8.0", optional = true }
embedded-graphics-simulator = { version = "0.5.0", optional = true }
