[package]
name = "desktop-simulator-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.6.0" }
anyhow = "1.0.44"
embedded-graphics = "0.8.0"
embedded-graphics-simulator = "0.5.0"
env_logger = "0.10.1"
log = "0.4.20"
embedded-software-slint-backend = { path = "../../libs/embedded-software-slint-backend" }
app-core = { path = "../app-core", features = ["software-renderer"] }
