[package]
name = "esp32c3-impl"
version = "0.1.0"
authors = ["zzq <i@zhangzqs.cn>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pyclock = []
default = ["std", "embassy", "esp-idf-svc/native", "pyclock"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
# embedded crates
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-sys = { version = "0.34" }
esp-idf-hal = { version = "0.43" }
embedded-svc = { version = "0.27" }
embedded-graphics = "0.8.0"
embedded-io-adapters = { version = "0.6.1", features = ["std"] }
display-interface-spi = "0.4.1"
display-interface = "0.4.1"
mipidsi = { version = "0.7.1", default-features = false }
heapless = "0.8.0"

# common crates
log = { version = "0.4.17", default-features = false }
anyhow = "1.0.71"
slint = { version = "1.6.0", default-features = false }
serde_json = "1.0.117"
serde = "1.0.203"
libflate = "2.1.0"

# internal crates
embedded-software-slint-backend = { path = "../../libs/embedded-software-slint-backend" }
embedded-graphics-mux = { path = "../../libs/embedded-graphics-mux" }
app-core = { path = "../app-core", default-features = false, features = [
    "software-renderer",
] }
button-driver = { path = "../../libs/button-driver", features = [
    "std",
    "embedded_hal",
] }

[build-dependencies]
embuild = "0.31.2"
anyhow = "1.0.71"
toml-cfg = "=0.1.3"
