[package]
name = "desktop-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
embedded-io = "0.6.1"
embedded-svc = "0.26.1"
hyper = { version = "1.0.1", features = ["full"]}
reqwest = { version="0.11.22", features=["blocking"] }
tokio = "1.34.0"
