[package]
name = "desktop-svc"
version = "0.1.0"
edition = "2021"

[features]
default = ["http-client-reqwest", "http-server"]
http-client-simple = []
http-client-reqwest = ["reqwest"]
http-server = ["rusty_pool"]

[dependencies]
anyhow = "1.0.75"
embedded-io = "0.6.1"
embedded-svc = "0.26.1"
log = "0.4.20"
postcard = "1.0.8"

reqwest = { version = "0.11.22", default-features = false, features = [
    "blocking",
], optional = true }
rusty_pool = { version = "0.7.0", optional = true }
sled = "0.34.7"
thiserror = "1.0.52"

[dev-dependencies]
env_logger = "0.10.1"
