[package]
name = "embedded-graphics-slint-image-buf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
slint = { version = "1.3.2", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
] }
euclid = "0.22.9" # slint will build error if don't have this
