[package]
name = "embedded-software-slint-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
log = "0.4.20"
slint = { version = "1.3.0", default-features = false, features = ["compat-1-0", "unsafe-single-threaded"] }
euclid = "0.22.9" # slint will build error if don't have this