[package]
name = "embedded-software-slint-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
log = "0.4.20"
slint = { git="https://github.com/zhangzqs/slint", branch = "fix-esp-std", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "renderer-software"] }
euclid = "0.22.9" # slint will build error if don't have this