[package]
name = "http-client-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
http = "0.2.9"
http-client-common = { path="../http-client-common" }
reqwest = {version = "0.11.22", features=["blocking"]}

[dev-dependencies]
httpmock = "0.6.8"
