[package]
name = "http-client-embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
embedded-io = "0.6.1"
embedded-svc = "0.26.2"
http = "0.2.9"
http-client-common = { path="../http-client-common" }
